# djaodjin-deployutils

./: .gitignore  .readthedocs.yaml  Dockerfile  Makefile  README.md  changelog  pyproject.toml  requirements.txt  setup.py
deployutils/: __init__.py  compat.py  configs.py  copy.py  crypt.py  djd.py  filesys.py  helpers.py  logging.py  middleware.py  mixins.py  redirects.py  s3.py  settings.py  thread_local.py  urlbuilders.py
deployutils/apps/django/: authentication.py  compat.py  logging.py  middleware.py  mixins.py  redirects.py  settings.py  themes.py  urlbuilders.py
deployutils/apps/django/backends/: auth.py  encrypted_cookies.py  jwt_session_store.py  session_base.py
deployutils/apps/django/mixins/: __init__.py  base.py  timers.py
deployutils/apps/django/mockup/: api.py  forms.py  urls.py  views.py
deployutils/apps/django_deployutils/: authentication.py  compat.py  logging.py  redirects.py  settings.py  themes.py
deployutils/apps/flask/: __init__.py  mockup.py  sessions.py  templates.py
deployutils/backends/: __init__.py  auth.py  encrypted_cookies.py  s3.py
deployutils/management/commands/: __init__.py  cryptic_media.py  decrypt_session.py  download_configs.py  download_resources.py  encrypt_session.py  install_theme.py  loadfixtures.py  package_theme.py  pullapp.py  pushapp.py  referenced_assets.py  referenced_extends.py  syncapp.py  upload_configs.py  upload_resources.py
deployutils/mockup/: forms.py  urls.py  views.py
deployutils/templatetags/: deployutils_extratags.py  deployutils_prefixtags.py  deployutils_tags.py
docs/: conf.py  deploy-django.rst  djd.rst  index.rst  upload_resources.rst
nodejs/: package.json
scripts/: dpull.py  pre-receive
src/: djd  djd.py
testsite/: jinja2.py  requirements-3.12.txt  requirements-3.7.txt  requirements-3.9.txt  requirements-legacy.txt  requirements.txt  settings.py  urls.py  views.py  wsgi.py
testsite/etc/: credentials
testsite/static/js/: app.js
testsite/templates/: base.html  index.html
testsite/templates/accounts/: login.html
(+28 files in other folders)
